[gd_scene load_steps=63 format=2]

[ext_resource path="res://assets/images/zombie/Idle (7).png" type="Texture" id=1]
[ext_resource path="res://assets/images/zombie/Idle (6).png" type="Texture" id=2]
[ext_resource path="res://assets/images/zombie/Dead (6).png" type="Texture" id=3]
[ext_resource path="res://assets/images/zombie/Dead (1).png" type="Texture" id=4]
[ext_resource path="res://assets/images/zombie/Idle (4).png" type="Texture" id=5]
[ext_resource path="res://assets/images/zombie/Dead (2).png" type="Texture" id=6]
[ext_resource path="res://assets/images/zombie/Attack (2).png" type="Texture" id=7]
[ext_resource path="res://assets/images/zombie/Walk (3).png" type="Texture" id=8]
[ext_resource path="res://assets/images/zombie/Dead (5).png" type="Texture" id=9]
[ext_resource path="res://assets/images/zombie/Idle (2).png" type="Texture" id=10]
[ext_resource path="res://assets/images/zombie/Idle (3).png" type="Texture" id=11]
[ext_resource path="res://assets/images/zombie/Idle (1).png" type="Texture" id=12]
[ext_resource path="res://assets/images/zombie/Dead (7).png" type="Texture" id=13]
[ext_resource path="res://assets/images/zombie/Attack (3).png" type="Texture" id=14]
[ext_resource path="res://assets/images/zombie/Walk (1).png" type="Texture" id=15]
[ext_resource path="res://assets/images/zombie/Dead (3).png" type="Texture" id=16]
[ext_resource path="res://assets/images/zombie/Attack (4).png" type="Texture" id=17]
[ext_resource path="res://assets/images/zombie/Idle (5).png" type="Texture" id=18]
[ext_resource path="res://assets/images/zombie/Attack (1).png" type="Texture" id=19]
[ext_resource path="res://assets/images/zombie/Dead (4).png" type="Texture" id=20]
[ext_resource path="res://assets/images/zombie/Walk (2).png" type="Texture" id=21]
[ext_resource path="res://assets/images/zombie/Walk (4).png" type="Texture" id=22]
[ext_resource path="res://assets/images/zombie/Attack (5).png" type="Texture" id=23]
[ext_resource path="res://assets/images/zombie/Walk (5).png" type="Texture" id=24]
[ext_resource path="res://assets/images/zombie/Walk (6).png" type="Texture" id=25]
[ext_resource path="res://assets/images/zombie/Walk (7).png" type="Texture" id=26]
[ext_resource path="res://assets/images/zombie/Walk (8).png" type="Texture" id=27]
[ext_resource path="res://assets/images/zombie/Walk (9).png" type="Texture" id=28]
[ext_resource path="res://assets/images/zombie/Walk (10).png" type="Texture" id=29]
[ext_resource path="res://assets/images/zombie/Idle (8).png" type="Texture" id=30]
[ext_resource path="res://assets/images/zombie/Idle (9).png" type="Texture" id=31]
[ext_resource path="res://assets/images/zombie/Idle (10).png" type="Texture" id=32]
[ext_resource path="res://assets/images/zombie/Idle (11).png" type="Texture" id=33]
[ext_resource path="res://assets/images/zombie/Idle (12).png" type="Texture" id=34]
[ext_resource path="res://assets/images/zombie/Idle (13).png" type="Texture" id=35]
[ext_resource path="res://assets/images/zombie/Idle (14).png" type="Texture" id=36]
[ext_resource path="res://assets/images/zombie/Idle (15).png" type="Texture" id=37]
[ext_resource path="res://assets/images/zombie/Attack (6).png" type="Texture" id=38]
[ext_resource path="res://assets/images/zombie/Attack (7).png" type="Texture" id=39]
[ext_resource path="res://assets/images/zombie/Attack (8).png" type="Texture" id=40]
[ext_resource path="res://assets/images/zombie/Dead (8).png" type="Texture" id=41]
[ext_resource path="res://assets/images/zombie/Dead (9).png" type="Texture" id=42]
[ext_resource path="res://assets/images/zombie/Dead (10).png" type="Texture" id=43]
[ext_resource path="res://assets/images/zombie/Dead (11).png" type="Texture" id=44]
[ext_resource path="res://assets/images/zombie/Dead (12).png" type="Texture" id=45]
[ext_resource path="res://scenes/enemies/ground_enemy.gd" type="Script" id=46]
[ext_resource path="res://behavior_tree/blackboard.gd" type="Script" id=47]
[ext_resource path="res://behavior_tree/behavior_tree.gd" type="Script" id=48]
[ext_resource path="res://scenes/enemies/behavior_tree_actions/turn_towards_player.gd" type="Script" id=49]
[ext_resource path="res://behavior_tree/composite/behavior_tree_selector.gd" type="Script" id=50]
[ext_resource path="res://behavior_tree/composite/behavior_tree_sequence.gd" type="Script" id=51]
[ext_resource path="res://scenes/enemies/behavior_tree_actions/idle.gd" type="Script" id=53]
[ext_resource path="res://behavior_tree/leaves/bt_check_blackboard_prop.gd" type="Script" id=54]
[ext_resource path="res://scenes/enemies/behavior_tree_actions/move.gd" type="Script" id=55]
[ext_resource path="res://scenes/enemies/player_detection_area.tscn" type="PackedScene" id=56]
[ext_resource path="res://scenes/enemies/behavior_tree_actions/move_towards_player.gd" type="Script" id=58]
[ext_resource path="res://behavior_tree/leaves/bt_call_simple_func.gd" type="Script" id=60]
[ext_resource path="res://behavior_tree/leaves/bt_set_blackboard_from_prop.gd" type="Script" id=61]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 18 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 23 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 21 ), ExtResource( 8 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 16 ), ExtResource( 20 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 13 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45, 78 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 300, 33 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 51, 62 )

[node name="GroundEnemy" type="KinematicBody2D"]
script = ExtResource( 46 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8.41846 )
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PlayerNearDetectionArea" parent="." instance=ExtResource( 56 )]
position = Vector2( 0, 33 )

[node name="CollisionShape2D" parent="PlayerNearDetectionArea" index="0"]
shape = SubResource( 3 )

[node name="PlayerCloseDetectionArea" parent="." instance=ExtResource( 56 )]

[node name="CollisionShape2D" parent="PlayerCloseDetectionArea" index="0"]
shape = SubResource( 4 )

[node name="BehaviorTree" type="Node" parent="."]
script = ExtResource( 48 )
agent = NodePath("..")
blackboard = NodePath("../BlackBoard")

[node name="BTSequence" type="Node" parent="BehaviorTree"]
script = ExtResource( 51 )

[node name="RecordIsDyingToBlackboard" type="Node" parent="BehaviorTree/BTSequence"]
script = ExtResource( 61 )
node = NodePath("../../..")
node_property_or_function_name = "is_dying"

[node name="RecordPlayerIsNearToBlackboard" type="Node" parent="BehaviorTree/BTSequence"]
script = ExtResource( 61 )
node = NodePath("../../../PlayerNearDetectionArea")
node_property_or_function_name = "player_is_in_area"
blackboard_property_name = "player_is_near"

[node name="RecordPlayerIsCloseToBlackboard" type="Node" parent="BehaviorTree/BTSequence"]
script = ExtResource( 61 )
node = NodePath("../../../PlayerCloseDetectionArea")
node_property_or_function_name = "player_is_in_area"
blackboard_property_name = "player_is_close"

[node name="DoOneOfTheseActions" type="Node" parent="BehaviorTree/BTSequence"]
script = ExtResource( 50 )

[node name="DeathAnimationIfDying" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions"]
script = ExtResource( 51 )

[node name="IsDying" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/DeathAnimationIfDying"]
script = ExtResource( 54 )
blackboard_property_name = "is_dying"

[node name="die" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/DeathAnimationIfDying"]
script = ExtResource( 60 )
node = NodePath("../../../../..")
node_function_name = "die"

[node name="AttackPlayerIfClose" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions"]
script = ExtResource( 51 )

[node name="CheckIfPlayerClose" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/AttackPlayerIfClose"]
script = ExtResource( 54 )
blackboard_property_name = "player_is_close"

[node name="attack" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/AttackPlayerIfClose"]
script = ExtResource( 60 )
node = NodePath("../../../../..")
node_function_name = "attack"

[node name="ChasePlayerIfNear" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions"]
script = ExtResource( 51 )

[node name="CheckIfPlayerNear" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/ChasePlayerIfNear"]
script = ExtResource( 54 )
blackboard_property_name = "player_is_near"

[node name="TurnTowardsPlayer" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/ChasePlayerIfNear"]
script = ExtResource( 49 )

[node name="MoveTowardsPlayer" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/ChasePlayerIfNear"]
script = ExtResource( 58 )

[node name="PatrolArea" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions"]
script = ExtResource( 50 )

[node name="MoveOrIdle" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/PatrolArea"]
script = ExtResource( 50 )

[node name="Idle" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/PatrolArea/MoveOrIdle"]
script = ExtResource( 53 )

[node name="Move" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/PatrolArea/MoveOrIdle"]
script = ExtResource( 55 )

[node name="TurnAround" type="Node" parent="BehaviorTree/BTSequence/DoOneOfTheseActions/PatrolArea"]
script = ExtResource( 60 )
node = NodePath("../../../../..")
node_function_name = "turn_around"

[node name="BlackBoard" type="Node" parent="."]
script = ExtResource( 47 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[editable path="PlayerNearDetectionArea"]
[editable path="PlayerCloseDetectionArea"]
